--- a/Module 1/Установка.md
+++ b/Module 1/Установка.md
@@ -26,7 +26,7 @@ http://ip или имя сервреа/zabbix/
  Установка SQL сервера
 Для установки будем использовать MySQL
 ```
-apt install mysql-server
+# apt install mysql-server
 ```
  Настройка кодировки UTF-8
 ```
@@ -55,3 +55,110 @@ innodb_strict_mode=OFF
 sql_mode=""
 innodb_strict_mode=OFF
 ```
+Смена пароля пользователя root
+
+Подключение
+
+В интерактивном режиме
+```
+# mysql -u root -p
+
+Welcome to the MySQL monitor.  Commands end with ; or \g.
+```
+MariaDB
+
+```
+MariaDB [(none)]> ALTER USER root@localhost IDENTIFIED VIA mysql_native_password;
+
+MariaDB [(none)]> SET PASSWORD = PASSWORD('12345678');
+
+# service mysql restart
+```
+Выход
+```
+mysql> exit
+```
+
+Управление базами данных и пользователями
+
+Просмотр списка баз данных и подключение к базе данных
+```
+mysql> show databases;
+mysql> use mysql;
+```
+
+Установка из репозитория Debian
+```
+# apt install zabbix-server-mysql   #2m
+
+# less /usr/share/doc/zabbix-server-mysql/README.Debian
+
+# nano zabbix.sql
+```
+```
+#drop database zabbix;
+create database zabbix character set utf8 collate utf8_bin;
+
+#debian11
+#grant all privileges on zabbix.* to zabbix@localhost identified by 'zabbix';
+
+#ubuntu20
+#create  USER zabbix@localhost identified by 'zabbix';
+#grant all privileges on zabbix.* to zabbix@localhost;
+```
+```
+# mysql < zabbix.sql
+```
+```
+# cat /usr/share/zabbix-server-mysql/{schema,images,data}.sql.gz | mysql -uzabbix -pzabbix zabbix  
+```
+```
+# nano /etc/zabbix/zabbix_server.conf.d/<Название вашего конфига>.conf
+```
+```
+DBHost=localhost
+DBName=zabbix
+DBUser=zabbix
+DBPassword=zabbix
+```
+Перезапуск служб
+```
+# systemctl enable zabbix-server
+
+# service zabbix-server start
+```
+Установка и запуск web интерфейса
+
+Установка и запуск сервера Apache
+
+Debian/Ubuntu
+
+```
+# apt install apache2
+```
+
+Базовая конфигурация
+Управление кодировкой
+```
+# nano /etc/apache2/sites-available/000-default.conf
+...
+        AddDefaultCharset utf-8
+...
+```
+
+Установка компоненов zabbix web
+```
+# apt install zabbix-frontend-php php-mysql
+
+# less /usr/share/doc/zabbix-frontend-php/README.Debian
+```
+```
+# nano /etc/apache2/conf-available/zabbix-frontend-php.conf
+```
+```
+php_value date.timezone Europe/Moscow
+
+php_value date.timezone Europe/Moscow
+```
+
+
