--- a/Module 3/Узлы сети.md
+++ b/Module 3/Узлы сети.md
@@ -47,3 +47,11 @@ Monitoring->Hosts->Latest data
   google.com->check perf http google.com
   Zoom: 1h
 ```
+Создание Host групп
+
+Создайте новую host группу с название My Web monitoring
+Добавьте в нее два узла созданных ранее
+
+
+Массовое обновление
+Включите для созднных узлов инвентаризацию в режиме FULL.
