--- a/Module 1/Установка.md
+++ b/Module 1/Установка.md
@@ -2,7 +2,7 @@
 
 Устиановка MySQL для сервера Zabbix
 ```
-apt install mysql-server
+apt install default-mysql-server
 ```
 
 Установка Zabbix server на виртуальныю машину
