--- a/Module 3/Узлы сети.md
+++ b/Module 3/Узлы сети.md
@@ -34,6 +34,23 @@ Host: google.com
     Type of information: Numeric (float)
 
 ```
+```
+Host: Zabbix
+  Items
+    Name: check ping gate.isp.un
+    Type: Simple check
+    Key: icmpping[<Windows ip or DNS>]
+
+```
+
+```
+Host: Zabbix
+...
+  Items
+    Name: check rdp admin/host windows
+    Type: Simple check
+    Key: net.tcp.service[tcp,<Windows ip or DNS>,3389]
+```
 
 Визуализация данных
 
@@ -54,4 +71,4 @@ Monitoring->Hosts->Latest data
 
 
 Массовое обновление
-Включите для созднных узлов инвентаризацию в режиме FULL.
+Включите для созданных узлов инвентаризацию в режиме FULL.
