--- a/Module 3/Узлы сети.md
+++ b/Module 3/Узлы сети.md
@@ -37,7 +37,7 @@ Host: google.com
 ```
 Host: Zabbix
   Items
-    Name: check ping gate.isp.un
+    Name: check ping
     Type: Simple check
     Key: icmpping[<Windows ip or DNS>]
 
