--- a/Module 2/Ролевая модель.md
+++ b/Module 2/Ролевая модель.md
@@ -11,4 +11,4 @@ https://www.zabbix.com/documentation/current/ru/manual/config/users_and_usergrou
 
 Создание учетной записи demo/Pa$$w0rd с User type: “Zabbix User” и включить его в группу Zabbix Demo
 
-Demo должен иметь права на просмотр результатов мониторинга через Web интерфейс 
+Пользователь Demo должен иметь права на просмотр результатов мониторинга через Web интерфейс 
