--- a/Module 3/Узлы сети.md
+++ b/Module 3/Узлы сети.md
@@ -61,25 +61,25 @@ o	Имя: Использование процессора
 o	Ключ: system.cpu.util[,<тип>,<режим>]. (Укажите тип и режим в соответствии с вашими требованиями, например, system.cpu.util[,,avg1])
 5.	Заполните остальные поля и нажмите кнопку Добавить.
 
-6.	Перейдите на вкладку Items (Элементы) и нажмите кнопку Create Item (Создать элемент).
+6.	Create Item (Создать элемент).
 7.	Заполните необходимые данные:
 8	Имя: Использование оперативной памяти
 9	Ключ: vm.memory.size[used]
 10.	Заполните остальные поля и сохраните изменения.
 
-11.	Перейдите на вкладку Items (Элементы) и нажмите кнопку Create Item (Создать элемент).
+11.	 Create Item (Создать элемент).
 12.	Заполните необходимые данные:
 o	Имя: Свободное место на диске
 o	Ключ: vfs.fs.size[/,free]
 13.	Заполните остальные поля и сохраните изменения.
 
-14.	Перейдите на вкладку Items (Элементы) и нажмите кнопку Create Item (Создать элемент).
+14.	 Create Item (Создать элемент).
 15.	Заполните необходимые данные:
 o	Имя: Доступность сетевого интерфейса
 o	Ключ: net.if.status[<имя_интерфейса>]
 16.	Заполните остальные поля и сохраните изменения.
 
-17.	Перейдите на вкладку Items (Элементы) и нажмите кнопку Create Item (Создать элемент).
+17. Create Item (Создать элемент).
 18.	Заполните необходимые данные:
 o	Имя: Количество активных процессов
 o	Ключ: proc.num[]
