--- a/Module 2/Ролевая модель.md
+++ b/Module 2/Ролевая модель.md
@@ -16,7 +16,7 @@ https://www.zabbix.com/documentation/current/ru/manual/config/users_and_usergrou
 
 Глобальный поиск
 
-1.	Найдите строку поиска (правый верхний угол).
+1.	Найдите строку поиска (Левый верхний угол).
 2.	Введите термин (например, "CPU") и нажмите клавишу Enter.
 3.	Изучите полученные результаты. Обратите внимание на то, как Zabbix предоставляет связанные записи из различных разделов
 
