--- a/Module 6/Триггеры.md
+++ b/Module 6/Триггеры.md
@@ -1,23 +1,45 @@
-Создание триггеров
+Создание элемента триггер
 
+В веб интерфейсе zabbix открывает "Data collection" - 'Host'
 
-Host: server.corpX.un
-    Name: gate.isp.un is unreachable
-    Expression: {server.corpX.un:icmpping[gate.isp.un].last()}=0    Zabbix < 5.4
-    Expression: last(/server.corpX.un/icmpping[gate.isp.un])=0     Zabbix >= 5.4
+Выбираем на хосте zabbix server - triggers
+
+Нажимаем в верхнем правом углу Create trigger
+
+```
+Host: zabbix server
+    Name: Win2016 is unreachable
+    Expression: last(/zabbix server/icmpping[192.168.10.104])=0     
     Severity: High
 
     Name: RDP service on host is not available
-    Expression: {server.corpX.un:net.tcp.service[tcp,192.168.X.5,3389].last()}=0
-    Expression: last(/server.corpX.un/net.tcp.service[tcp,192.168.X.29,3389])=0
+    Expression: last(/Zabbix server/net.tcp.service[tcp,192.168.10.104,3389])=0
     Severity: Warning
+```
 
+Создание триггера с использованием макроса
+```
 Host: ya.ru 
     Name: HTTPS service on {HOST.NAME} is not available
-    Expression: {ya.ru:net.tcp.service.perf[https].max(#2)}=0
+    Expression: last(/ya.ru/net.tcp.service.perf[https])=0
+    или
     Expression: max(/ya.ru/net.tcp.service.perf[https],#2)=0
 
-    Dependencies: Zabbix server: gate.isp.un is unreachable   
-        !!!Можно добавить после эксперимента с недоступностью gate.isp.un и двумя, сработавшими триггерами
+так же можно добавить зависимость
+    Dependencies: Win2016 is unreachable  
 
     Severity: Average
+```
+```
+Host: ya.ru                                       
+    Name: HTTP service on {HOST.NAME} is slow
+    
+    Значение подобрать на основе графика
+    
+    Expression: avg(/ya.ru/net.tcp.service.perf[https],5m)>0.4
+
+    Severity: Warning
+```
+
+Повторить настройки ya.ru для хоста google.com
+
