--- a/Module 6/Триггеры.md
+++ b/Module 6/Триггеры.md
@@ -11,7 +11,10 @@ Host: zabbix server
     Name: Win2016 is unreachable
     Expression: last(/zabbix server/icmpping[192.168.10.104])=0     
     Severity: High
+```
 
+```
+Host: zabbix server
     Name: RDP service on host is not available
     Expression: last(/Zabbix server/net.tcp.service[tcp,192.168.10.104,3389])=0
     Severity: Warning
