--- a/Module 7/Расширенный мониторинг.md
+++ b/Module 7/Расширенный мониторинг.md
@@ -41,7 +41,7 @@ chmod +x /usr/local/bin/dhcp_stat.sh
 Редактируем файл конфигурации Agent на Gate
 
 ```
-# nano /etc/zabbix/zabbix_agentd.*d/dhcp_stat.conf
+# nano /etc/zabbix/zabbix_agentd.d/dhcp_stat.conf
 ```
 ```
 UserParameter=dhcp.stat[*],/usr/local/bin/dhcp_stat.sh $1
