--- a/Module 7/Расширенный мониторинг.md
+++ b/Module 7/Расширенный мониторинг.md
@@ -221,7 +221,7 @@ Hosts->zabbix->Items
 Тестируем работу приложения
 
 ```
-zabbix_sender -z 192.168.10.103 -p 10051 -s 192.168.10.103 -k my.item -o 1
+zabbix_sender -z 192.168.10.103 -p 10051 -s <Name host> -k my.item -o 1
 ```
 
 Переделываем работы получение данных из speedtest
@@ -243,8 +243,8 @@ MY_UPLOAD=`echo $MY_RES | cut -d',' -f8`
 #MY_DOWNLOAD=`echo $MY_RES | cut -d',' -f6`
 #Y_UPLOAD=`echo $MY_RES | cut -d',' -f7`
 
-zabbix_sender -z 127.0.0.1 -p 10051 -s 192.168.10.103 -k speedtest.download -o $MY_DOWNLOAD
-zabbix_sender -z 127.0.0.1 -p 10051 -s 192.168.10.103 -k speedtest.upload -o $MY_UPLOAD
+zabbix_sender -z 127.0.0.1 -p 10051 -s <Name host> -k speedtest.download -o $MY_DOWNLOAD
+zabbix_sender -z 127.0.0.1 -p 10051 -s <Name host> -k speedtest.upload -o $MY_UPLOAD
 ```
 
 Создаем новые Item
