--- a/Module 7/Расширенный мониторинг.md
+++ b/Module 7/Расширенный мониторинг.md
@@ -210,7 +210,7 @@ Hosts->zabbix->Items
   Name: my item
     Type: Zabbix trapper
     Key:  my.item
-    Allowed hosts: 127.0.0.1, 192.168.X.0/24
+    Allowed hosts: 127.0.0.1,192.168.10.0/24
 ```
 Исталируем приложение 
 
