--- a/Module 8/Шаблоны.md
+++ b/Module 8/Шаблоны.md
@@ -17,7 +17,7 @@ apt install xmlstarlet
 
 ```
   Templates
-    Template App SSH Port Service/SSH Port Service
+    Template App SSH Port Service SSH Port Service
       Items
         SSH service is running {HOST.NAME}
           Key: net.tcp.service[ssh,,{$SSH_PORT}]
