--- a/Module 8/Шаблоны.md
+++ b/Module 8/Шаблоны.md
@@ -15,11 +15,14 @@ apt install xmlstarlet
 
 Простые шаблоны
 
+Создаем шаблон 
+
 ```
-  Templates
-    Template App SSH Port Service SSH Port Service
+  Templates->Create template
+  Templates Name: Template App SSH Port Service SSH Port Service
+  Groups: My Template
       Items
-        SSH service is running {HOST.NAME}
+          Name: SSH service is running {HOST.NAME}
           Key: net.tcp.service[ssh,,{$SSH_PORT}]
           Update interval: 30s
       Macros
