--- a/Module 8/Шаблоны.md
+++ b/Module 8/Шаблоны.md
@@ -163,6 +163,16 @@ test "x$2" = "xused" && res_field=3
 
 # /etc/zabbix/dhcp-pools-shared-network.sh LAN1 used
 ```
+
+Создаем  на Gate новый файл дл агента.
+```
+# nano `echo /etc/zabbix/zabbix_agentd.conf.d/dhcp_stat.conf
+```
+```
+UserParameter=dhcp.pools.discovery,/etc/zabbix/dhcp-pools-discovery.sh
+
+UserParameter=dhcp.pools.shared-network[*],/etc/zabbix/dhcp-pools-shared-network.sh $1 $2
+```
 Создаем настройки 
 
 ```
