--- a/Module 8/Шаблоны.md
+++ b/Module 8/Шаблоны.md
@@ -164,9 +164,9 @@ test "x$2" = "xused" && res_field=3
 # /etc/zabbix/dhcp-pools-shared-network.sh LAN1 used
 ```
 
-Создаем  на Gate новый файл дл агента.
+Создаем  на Gate новый файл для агента.
 ```
-# nano `echo /etc/zabbix/zabbix_agentd.conf.d/dhcp_stat.conf
+# nano  /etc/zabbix/zabbix_agentd.conf.d/dhcp_stat.conf
 ```
 ```
 UserParameter=dhcp.pools.discovery,/etc/zabbix/dhcp-pools-discovery.sh
