--- a/Module 8/Шаблоны.md
+++ b/Module 8/Шаблоны.md
@@ -190,13 +190,13 @@ Add
     Key: dhcp.pools.discovery
   Add
     Item prototypes
-      Name: DHCP Pool $1 max addr      или DHCP Pool {#POOLNAME} max addr
+      Name: DHCP Pool {#POOLNAME} max addr
       Type: Zabbix Agent
       Key: dhcp.pools.shared-network[{#POOLNAME},defined]
       
     Add
 
-      Name: DHCP Pool $1 cur addr
+      Name: DHCP Pool {#POOLNAME} cur addr
       Type: Zabbix Agent
       Key: dhcp.pools.shared-network[{#POOLNAME},used]
       
