--- a/Module 8/Шаблоны.md
+++ b/Module 8/Шаблоны.md
@@ -131,6 +131,10 @@ echo -n ${str::-1}
 
 echo -n ']}'
 ```
+Разрешем выполняться скрипту 
+```
+chmod +x /etc/zabbix/dhcp-pools-discovery.sh
+```
 
 Проверяем работу
 
@@ -154,6 +158,10 @@ test "x$2" = "xused" && res_field=3
   /usr/bin/xmlstarlet sel -T -t -m '//shared-network' \
   -v location -o ' ' -v defined -o ' ' -v used -n | \
   grep $1 | cut -d ' ' -f $res_field
+```
+Разрешем выполняться скрипту 
+```
+chmod +x /etc/zabbix/dhcp-pools-shared-network.sh
 ```
 
 тестирование скрипта
