--- a/Module 01/Установка.md
+++ b/Module 01/Установка.md
@@ -21,7 +21,8 @@ https://www.zabbix.com/download?zabbix=6.4&os_distribution=debian&os_version=11&
 http://ip или имя сервреа/zabbix/
 ```
 
- Альтернативные варианты установки 
+
+ Альтернативные варианты установки ( Не использовать не курсе)
 
 Установка и запуск сервера
 
