--- a/Module 02/Ролевая модель.md
+++ b/Module 02/Ролевая модель.md
@@ -39,7 +39,7 @@ https://www.zabbix.com/documentation/current/ru/manual/config/users_and_usergrou
 
 
 Настройка уведомлений пользователя
-1.	Перейдите на вкладку "Медиа".
+1.	Перейдите на вкладку "Media types".
 2.	Нажмите кнопку "Добавить", чтобы ввести новый тип носителя.
 3.	В раскрывающемся списке выберите в качестве типа носителя "Email".
 4.	В поле "Отправить на" введите действующий адрес электронной почты.
