--- a/Module 03/Узлы сети.md
+++ b/Module 03/Узлы сети.md
@@ -19,7 +19,7 @@ Host name: ya.ru
 ```
 Host: ya.ru
   Items 
-    Name: check perf http {HOST.NAME}
+    Name: check perf http
     Type: Simple check
     Key: net.tcp.service.perf[https]
     Type of information: Numeric (float)
@@ -28,7 +28,7 @@ Host: ya.ru
 ```
 Host: google.com
   Items 
-    Name: check perf http {HOST.NAME}
+    Name: check perf http
     Type: Simple check
     Key: net.tcp.service.perf[https]
     Type of information: Numeric (float)
