--- a/Module 08/Шаблоны.md
+++ b/Module 08/Шаблоны.md
@@ -95,15 +95,15 @@ nano /etc/dhcp/dhcpd.conf
 ```
 Находим блок с subnet
 ```
-shared-network LAN1 { добавлем
+добавлем в конец
+shared-network LAN1 { 
 
-Этот кусок оставляем как в файле
-  subnet 192.168.X.0 netmask 255.255.255.0 {
-    range 192.168.X.101 192.168.X.109;
+  subnet 192.168.30.0 netmask 255.255.255.0 {
+    range 192.168.30.101 192.168.X.109;
     option routers 192.168.X.1;
   }
 
-} добавлеям
+} 
 ```
 
 Создаем скрипты
