--- a/Module 08/Шаблоны.md
+++ b/Module 08/Шаблоны.md
@@ -24,12 +24,12 @@ apt install xmlstarlet
 Проверка данных из агента
 
 ```
-# zabbix_get -s 192.168.10.1 -k vfs.fs.discovery
-# zabbix_get -s 192.168.10.1 -k vfs.fs.size[/,free]
-# zabbix_get -s 192.168.10.1 -k vfs.fs.size[/,total]
-# zabbix_get -s 192.168.10.1 -k vfs.fs.size[/,used]
-# zabbix_get -s 192.168.10.1 -k net.if.discovery | jq
-# zabbix_get -s 192.168.10.1 -k net.if.in[eth0]
+# zabbix_get -s <ip address agent linux> -k vfs.fs.discovery
+# zabbix_get -s <ip address agent linux> -k vfs.fs.size[/,free]
+# zabbix_get -s <ip address agent linux> -k vfs.fs.size[/,total]
+# zabbix_get -s <ip address agent linux> -k vfs.fs.size[/,used]
+# zabbix_get -s <ip address agent linux> -k net.if.discovery | jq
+# zabbix_get -s <ip address agent linux> -k net.if.in[eth0]
 
 ```
 ```
