--- a/Module 06/Триггеры простые.md
+++ b/Module 06/Триггеры простые.md
@@ -47,4 +47,42 @@ Host: ya.ru
 Повторить настройки ya.ru для хоста google.com
 
 
+Настройка внешнего скрипта
+```
+# zabbix_server --help | grep ExternalScripts
 
+# nano /etc/zabbix/zabbix_server.conf
+```
+
+```
+...
+Timeout=30
+...
+ExternalScripts=/etc/zabbix/externalscripts
+...
+
+```
+
+```
+# mkdir /etc/zabbix/externalscripts
+```
+```
+# nano /etc/zabbix/externalscripts/ping_avg.sh
+```
+
+```
+#!/bin/sh
+ping -c"$1" "$2" | tail -n1 | cut -d'/' -f5
+```
+```
+>Hosts->ya.ru
+  Items
+    Name: Ping AVG
+    Type: External Check
+    Key: ping_avg.sh[3,"{HOST.CONN}"]
+    Type of information: Numeric (float)
+    Units: ms
+```
+Настроить триггер для нового item
+
+`
