--- a/Module 08/Шаблоны.md
+++ b/Module 08/Шаблоны.md
@@ -95,12 +95,20 @@ nano /etc/dhcp/dhcpd.conf
 ```
 Находим блок с subnet
 ```
-добавлем в конец
+добавлем 
 shared-network LAN1 { 
 
+  subnet 192.168.10.0 netmask 255.255.255.0 {
+    range 192.168.10.101 192.168.10.109;
+    option routers 192.168.10.1;
+  }
+
+}
+shared-network LAN2 { 
+
   subnet 192.168.30.0 netmask 255.255.255.0 {
-    range 192.168.30.101 192.168.X.109;
-    option routers 192.168.X.1;
+    range 192.168.30.101 192.168.30.109;
+    option routers 192.168.30.1;
   }
 
 } 
